# flottille

./: .cz.toml  .gitignore  Dockerfile  behave.ini  codecov.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pytest.yml  release.yml  tests.yml
src/flottille/api/: builder.py  config.py  main.py
src/flottille/etl/: __init__.py  base.py  factory.py  pipeline.py
src/flottille/etl/extractors/: csv_extractor.py  postgres_extractor.py
src/flottille/etl/loaders/: bytesio_loader.py
src/flottille/etl/transformers/: noop_transformer.py
tests/: test_bytesio_loader.py  test_csv_extractor.py  test_etl_base.py  test_etl_pipeline.py  test_etl_pipeline_factory.py  test_etl_pipeline_yaml_factory.py  test_flottille.py  test_functional_etl.py  test_noop_transformer.py  test_postgres_extractor.py
tests/api/: test_builder.py
tests/functional/: environment.py
tests/functional/features/: heartbeat.feature
tests/functional/steps/: step_common.py
tests/integration/: conftest.py  test_minimal_docker.py
tests/unit/: test_app_module.py
tests/unit/api/: test_builder.py  test_config.py  test_main.py
